--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: nmathieu <nmathieu@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/05/03 11:29:21 by nmathieu          #+#    #+#              #
-#    Updated: 2022/07/10 14:37:27 by nmathieu         ###   ########.fr        #
+#    Updated: 2022/07/10 16:51:47 by nmathieu         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -34,7 +34,7 @@ define SRCS :=
 	ft_open.c
 	ft_write_all.c
 	ft_reader_init.c
-	ft_reader_next.c
+	ft_reader_refill.c
 	ft_reader_consume.c
 	ft_reader_reserve.c
 	ft_reader_str.c
@@ -43,9 +43,11 @@ define SRCS :=
 	__ft_fmt_handle_char2.c
 	__ft_fmt_handle_string.c
 	__ft_fmt_handle_bool.c
+	__ft_fmt_handle_str.c
 	__ft_fmt_escape.c
 	ft_fmt_write.c
 	ft_fmt.c
+	ft_sfmt.c
 
 	ft_unwind.c
 	ft_unwind_panic.c
