implement the `c3d_map_parser_skip_empty_lines` function

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: nmathieu <nmathieu@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/05/03 11:29:21 by nmathieu          #+#    #+#              #
-#    Updated: 2022/07/10 16:51:47 by nmathieu         ###   ########.fr        #
+#    Updated: 2022/07/10 17:52:39 by nmathieu         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -34,10 +34,10 @@ define SRCS :=
 	ft_open.c
 	ft_write_all.c
 	ft_reader_init.c
-	ft_reader_refill.c
 	ft_reader_consume.c
 	ft_reader_reserve.c
 	ft_reader_str.c
+	ft_reader_get.c
 
 	__ft_fmt_parse_format.c
 	__ft_fmt_handle_char2.c
